# humthreads

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  other.md
ci/travis/: audit-script.sh  build-script.sh
src/: builder.rs  error.rs  handles.rs  lib.rs  registry.rs  status.rs  test_support.rs
src/handles/: map.rs  mod.rs
