[package]
name = "humthreads"
version = "0.2.0" # remember to update html_root_url
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"

description = "Threads for humans"
documentation = "https://docs.rs/humthreads"
homepage = "https://github.com/stefano-pogliani/humthreads"
repository = "https://github.com/stefano-pogliani/humthreads"
readme = "README.md"
keywords = ["threads"]
license = "MIT"


[features]
with_test_support = []


[dependencies]
crossbeam-channel = "^0.4.0"
failure = "^0.1.5"
lazy_static = "^1.3.0"
serde = "^1.0.34"
serde_derive = "^1.0.34"
