[package]
name = "humthreads"
version = "0.2.1" # remember to update html_root_url
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2021"

description = "Threads for humans"
documentation = "https://docs.rs/humthreads"
homepage = "https://github.com/stefano-pogliani/humthreads"
repository = "https://github.com/stefano-pogliani/humthreads"
readme = "README.md"
keywords = ["threads"]
license = "MIT"


[features]
with_test_support = []


[dependencies]
crossbeam-channel = "^0.5.0"
failure = "^0.1.5"
lazy_static = "^1.3.0"
serde = { version = "^1.0", features = ["derive"] }
